<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_main"
        android:title="Main"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_profile"
        android:title="Profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_map"
        android:title="Lokasi Kantor"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_booking"
        android:title="Booking"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_jadwal"
        android:title="Jadwal"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_logout"
        android:title="Logout"
        app:showAsAction="never" />

</menu>